<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bofang_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="right" android:background="@drawable/diaochawenjuan_title" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/setting_test_back" android:background="@xml/conver_back" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <ScrollView android:orientation="vertical" android:id="@id/ring_more_wenjuan" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:paddingLeft="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="3.0dip" android:layout_marginBottom="3.0dip" android:text="@string/q1" />
                <RadioGroup android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <RadioButton android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/rb11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:checked="true" android:text="@string/aa1" />
                    <RadioButton android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/rb12" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/aa2" />
                    <RadioButton android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/rb13" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/aa3" />
                </RadioGroup>
                <ImageView android:background="@drawable/fenge" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:layout_marginBottom="6.0dip" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:paddingLeft="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="3.0dip" android:layout_marginBottom="3.0dip" android:text="@string/q2" />
                <RadioGroup android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <RadioButton android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/rb21" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:checked="true" android:text="@string/aa11" />
                    <RadioButton android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/rb22" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/aa22" />
                    <RadioButton android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/rb23" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/aa33" />
                </RadioGroup>
                <ImageView android:background="@drawable/fenge" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:layout_marginBottom="6.0dip" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:paddingLeft="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="3.0dip" android:layout_marginBottom="3.0dip" android:text="@string/q3" />
                <RadioGroup android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <RadioButton android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/rb31" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:checked="true" android:text="@string/aa111" />
                    <RadioButton android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/rb32" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/aa222" />
                    <RadioButton android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/rb33" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/aa3" />
                </RadioGroup>
                <ImageView android:background="@drawable/fenge" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:layout_marginBottom="6.0dip" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:paddingLeft="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="3.0dip" android:layout_marginBottom="3.0dip" android:text="@string/q4" />
                <RadioGroup android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <RadioButton android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/rb41" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:checked="true" android:text="@string/aa14" />
                    <RadioButton android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/rb42" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/aa24" />
                    <RadioButton android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/rb43" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/aa34" />
                </RadioGroup>
                <ImageView android:background="@drawable/fenge" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:layout_marginBottom="6.0dip" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:paddingLeft="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="3.0dip" android:layout_marginBottom="3.0dip" android:text="@string/q5" />
                <RadioGroup android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <RadioButton android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/rb51" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:checked="true" android:text="@string/age1" />
                    <RadioButton android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/rb52" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/age2" />
                    <RadioButton android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/rb53" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/age3" />
                </RadioGroup>
                <ImageView android:background="@drawable/fenge" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:layout_marginBottom="6.0dip" />
            </LinearLayout>
            <Button android:layout_gravity="center_horizontal" android:id="@id/setting_test_btsend123" android:background="@drawable/setting_test_send_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>