<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/sellrel" android:background="@drawable/wangluo_dingshi_dialog" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <ImageButton android:id="@id/sleep_close" android:background="@drawable/sleep_close" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
        <RadioButton android:textColor="@color/theme_green_dark" android:id="@id/sleep_radio15" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="45.0dip" android:layout_marginTop="45.0dip" android:button="@xml/radiobutton" android:text="@string/sleep_15" />
        <RadioButton android:textColor="@color/theme_green_dark" android:id="@id/sleep_radio30" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="45.0dip" android:button="@xml/radiobutton" android:text="@string/sleep_30" android:layout_alignTop="@id/sleep_radio15" android:layout_alignParentRight="true" />
        <RadioButton android:textColor="@color/theme_green_dark" android:id="@id/sleep_radio45" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@xml/radiobutton" android:text="@string/sleep_45" android:layout_below="@id/sleep_radio15" android:layout_alignLeft="@id/sleep_radio15" />
        <RadioButton android:textColor="@color/theme_green_dark" android:id="@id/sleep_radio60" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@xml/radiobutton" android:text="@string/sleep_60" android:layout_alignLeft="@id/sleep_radio30" android:layout_alignTop="@id/sleep_radio45" />
        <RadioButton android:textColor="@color/theme_green_dark" android:id="@id/sleep_radio90" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@xml/radiobutton" android:text="@string/sleep_90" android:layout_below="@id/sleep_radio60" android:layout_alignLeft="@id/sleep_radio15" />
        <RadioButton android:textColor="@color/theme_green_dark" android:id="@id/sleep_radioedit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@xml/radiobutton" android:text="@string/sleep_edit" android:layout_below="@id/sleep_radio60" android:layout_alignLeft="@id/sleep_radio60" />
        <TextView android:textSize="10.0sp" android:textColor="@color/theme_green_dark" android:id="@id/sleep_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_below="@id/sleep_radioedit" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</RelativeLayout>